--- a/src/app/components/sign-in/sign-in.component.html
+++ b/src/app/components/sign-in/sign-in.component.html
@@ -1,14 +1,16 @@
 <div class="container my-3">
     <!-- Default form login -->
-    <form class="text-center border border-light p-5">
+    <form [formGroup]="userform" (ngSubmit)="onSubmit()" class="text-center border border-light p-5">
 
         <p class="h4 mb-4">Sign in</p>
 
         <!-- Email -->
-        <input type="email" id="defaultLoginFormEmail" class="form-control mb-4" placeholder="E-mail">
+        <input type="email" formControlName="username" id="defaultLoginFormEmail" class="form-control mb-4"
+            placeholder="E-mail">
 
         <!-- Password -->
-        <input type="password" id="defaultLoginFormPassword" class="form-control mb-4" placeholder="Password">
+        <input type="password" formControlName="password" id="defaultLoginFormPassword" class="form-control mb-4"
+            placeholder="Password">
 
         <div class="d-flex justify-content-around">
             <div>
@@ -22,7 +24,9 @@
         </div>
 
         <!-- Sign in button -->
-        <button mdbBtn color="info" block="true" class="my-4" type="submit">Sign in</button>
+        <div>
+            <button mdbBtn color="info" block="true" class="my-4" type="submit">Sign in</button>
+        </div>
 
         <!-- Register -->
         <p>Not a member?
