--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -44,7 +44,7 @@
         </a>
         <div *dropdownMenu class="dropdown-menu dropdown-menu-right dropdown dropdown-primary" role="menu">
           <a class="dropdown-item waves-light" mdbWavesEffect routerLink="/login">Sign In</a>
-          <a class="dropdown-item waves-light" mdbWavesEffect routerLink="/register">Sign out</a>
+          <a class="dropdown-item waves-light" mdbWavesEffect routerLink="/register">Sign up</a>
         </div>
       </li>
 
