--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -43,8 +43,10 @@
           <mdb-icon fas icon="user"></mdb-icon> Profile<span class="caret"></span>
         </a>
         <div *dropdownMenu class="dropdown-menu dropdown-menu-right dropdown dropdown-primary" role="menu">
-          <a class="dropdown-item waves-light" mdbWavesEffect routerLink="/login">Sign In</a>
-          <a class="dropdown-item waves-light" mdbWavesEffect routerLink="/register">Sign up</a>
+          <a class="dropdown-item waves-light" *ngIf="authService.isLoggedOut" mdbWavesEffect routerLink="/login">Sign In</a>
+          <a class="dropdown-item waves-light" *ngIf="authService.isLoggedOut" mdbWavesEffect routerLink="/register">Sign up</a>
+          <a class="dropdown-item waves-light" *ngIf="authService.isLoggedIn" mdbWavesEffect routerLink="/user">My Profile</a>
+          
         </div>
       </li>
 
