--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -13,13 +13,13 @@
     class="form-control mb-4" placeholder="E-mail">
 
   <!-- Subject -->
-  <label>Subject</label>
+  <label style="background-color: dimgray;">Subject</label>
   <select formControlName="contactFormSubjects" class="browser-default custom-select mb-4">
     <option value="" disabled>Choose option</option>
-    <option value="1" selected>Feedback</option>
-    <option value="2">Report a bug</option>
-    <option value="3">Feature request</option>
-    <option value="4">Feature request</option>
+    <option  selected>Feedback</option>
+    <option >Report a bug</option>
+    <option >Feature request</option>
+    <option >Feature request</option>
   </select>
 
   <!-- Message -->
