--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -15,7 +15,7 @@
         <a class="nav-link waves-light" routerLink="/exam" mdbWavesEffect>Exam</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link waves-light" mdbWavesEffect>Documentation</a>
+        <a class="nav-link waves-light" routerLink="/document" mdbWavesEffect>Documentation</a>
       </li>
      
 
