--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,20 @@
-<app-nav></app-nav>
- 
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>YAB</title>
+</head>
+
+<body>
+    <app-nav></app-nav>
+
     <router-outlet></router-outlet>
 
-<app-footer></app-footer>
+    <app-footer></app-footer>
+    <script src="../../node_modules/chart.js/dist/Chart.js"></script>
+</body>
+
+</html>
