--- a/src/app/usercomponent/sign-in/sign-in.component.html
+++ b/src/app/usercomponent/sign-in/sign-in.component.html
@@ -1,13 +1,13 @@
 <!-- Default form login -->
-<form class="text-center border border-light p-5" action="#!">
+<form class="text-center border border-light p-5" [formGroup]="userform" action="#!">
 
     <p class="h4 mb-4">Sign in</p>
 
     <!-- Email -->
-    <input type="email" class="form-control mb-4" placeholder="E-mail" #userName required autofocus>
+    <input type="email" formControlName="email" class="form-control mb-4" placeholder="E-mail" #userName required autofocus>
 
     <!-- Password -->
-    <input type="password" class="form-control mb-4" placeholder="Password" #userPassword required>
+    <input type="password" formControlName="password" class="form-control mb-4" placeholder="Password" #userPassword required>
 
     <div class="d-flex justify-content-around">
         <div>
@@ -24,7 +24,7 @@
     </div>
 
     <!-- Sign in button -->
-    <button class="btn btn-info btn-block my-4" value="Log in" (click)="authService.SignIn(userName.value , userPassword.value)" type="submit">Sign in</button>
+    <button class="btn btn-info btn-block my-4" value="Log in" [disabled]="!userform.valid" (click)="authService.SignIn(userName.value , userPassword.value)" type="submit">Sign in</button>
 
     <!-- Register -->
     <p>Not a member?
