--- a/src/app/usercomponent/sign-up/sign-up.component.html
+++ b/src/app/usercomponent/sign-up/sign-up.component.html
@@ -1,31 +1,31 @@
 <!-- Default form register -->
-<form class="text-center border border-light p-5" [formGroup]="userForm" action="#!">
+<form class="text-center border border-light p-5" action="#!">
 
     <p class="h4 mb-4">Sign up</p>
 
     <div class="form-row mb-4">
         <div class="col">
             <!-- First name -->
-            <input type="text" formControlName="first_name" id="defaultRegisterFormFirstName" class="form-control" placeholder="First name">
+            <input type="text" id="defaultRegisterFormFirstName" class="form-control" placeholder="First name">
         </div>
         <div class="col">
             <!-- Last name -->
-            <input type="text"  formControlName="last_name" id="defaultRegisterFormLastName" class="form-control" placeholder="Last name">
+            <input type="text" id="defaultRegisterFormLastName" class="form-control" placeholder="Last name">
         </div>
     </div>
 
     <!-- E-mail -->
-    <input type="email"  formControlName="email" #userEmail class="form-control mb-4" placeholder="E-mail" required autofocus>
+    <input type="email"  #userEmail class="form-control mb-4" placeholder="E-mail" required autofocus>
 
     <!-- Password -->
-    <input type="password"  formControlName="password" #userPwd class="form-control" placeholder="Password"
+    <input type="password" #userPwd class="form-control" placeholder="Password"
         aria-describedby="defaultRegisterFormPasswordHelpBlock" required>
     <small id="defaultRegisterFormPasswordHelpBlock" class="form-text text-muted mb-4">
         At least 8 characters and 1 digit
     </small>
 
     <!-- Phone number -->
-    <input type="text" formControlName="phone" id="defaultRegisterPhonePassword" class="form-control" placeholder="Phone number"
+    <input type="text" id="defaultRegisterPhonePassword" class="form-control" placeholder="Phone number"
         aria-describedby="defaultRegisterFormPhoneHelpBlock">
     <small id="defaultRegisterFormPhoneHelpBlock" class="form-text text-muted mb-4">
         Optional - for two step authentication
@@ -33,12 +33,12 @@
 
     <!-- Newsletter -->
     <div class="custom-control custom-checkbox">
-        <input type="checkbox"  formControlName="subscribe" class="custom-control-input" id="defaultRegisterFormNewsletter">
+        <input type="checkbox" class="custom-control-input" id="defaultRegisterFormNewsletter">
         <label class="custom-control-label" for="defaultRegisterFormNewsletter">Subscribe to our newsletter</label>
     </div>
 
     <!-- Sign up button -->
-    <button class="btn btn-info my-4 btn-block" [disabled]="!userForm.valid" (click)="authService.SignUp(userEmail.value, userPwd.value)" type="submit">Sign in</button>
+    <button class="btn btn-info my-4 btn-block" (click)="authService.SignUp(userEmail.value, userPwd.value)" type="submit">Sign in</button>
 
     <!-- Social register -->
     <p>or sign up with:</p>
