--- a/src/app/usercomponent/sign-up/sign-up.component.html
+++ b/src/app/usercomponent/sign-up/sign-up.component.html
@@ -38,7 +38,7 @@
     </div>
 
     <!-- Sign up button -->
-    <button class="btn btn-info my-4 btn-block" (click)="authService.SignUp(userEmail.value, userPwd.value)" type="submit">Sign in</button>
+    <button class="btn btn-info my-4 btn-block" (click)="authService.SignUp(userEmail.value, userPwd.value)" type="submit">Sign up</button>
 
     <!-- Social register -->
     <p>or sign up with:</p>
