--- a/src/app/components/pie/pie.component.html
+++ b/src/app/components/pie/pie.component.html
@@ -1,10 +1,12 @@
 <div class="text-center my-4  blue-grey-text">
     <h1>The Chart Show You Percent Of Done And Fail In Your Exam</h1>
 </div>
-<div style="display: block">
-    <canvas baseChart [data]="pieChartData" [labels]="pieChartLabels" [chartType]="pieChartType" [colors]="chartColors">
-    </canvas>
-</div>
+<div style="display: block" width="50px">
+    <canvas baseChart
+            [data]="pieChartData"
+            [labels]="pieChartLabels"
+            [chartType]="pieChartType"></canvas>
+  </div>
 <br>
 <div class="text-center my-4" *ngIf="authService.userData as user">
     <h3><strong>Your Point: </strong>{{point}}</h3>
